--- a/SuggestionAppUI/SuggestionAppUI.csproj
+++ b/SuggestionAppUI/SuggestionAppUI.csproj
@@ -17,4 +17,8 @@
     <PackageReference Include="Microsoft.Identity.Web.UI" Version="1.24.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\SuggestionAppLibrary\SuggestionAppLibrary.csproj" />
+  </ItemGroup>
+
 </Project>
